# moppi

./: .gitignore  LICENSE  README.md  moppi.py  pyproject.toml
moppi/: config.py  dependency.py  installer.py
tests/: test_moppi.py
