[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moppi"
version = "0.2"
authors = [
  { name="Gennadii Egorov", email="lemanyk@gmail.com" },
]
description = "Modern Python Package Installer"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=6.0",
    "tomli_w==1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.1",
]
dev = [
    "twine>=4.0",
    "build>=0.8",
]

[project.urls]
"Homepage" = "https://github.com/lemanyk/moppi"
"Bug Tracker" = "https://github.com/lemanyk/moppi/issues"

[tool.moppi]
indirect-dependencies = [
    ["click==1.0", "flask==1"],
    ["weurkzeug==1.0", "flask==1"],
]
#[tool.moppi.dependency-lock]
#[tool.moppi.indirect-dependencies]

[tool.black]
line-length = 100
