[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "moppi"
version = "0.3.1"
authors = [
    { name = "Gennadii Egorov", email = "lemanyk@gmail.com" },
]
description = "Modern Python Package Installer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=6.0",
    "tomli_w==1.0.0",
]

[project.scripts]
moppi = "moppi.installer:main"

[project.urls]
Homepage = "https://github.com/lemanyk/moppi"
"Bug Tracker" = "https://github.com/lemanyk/moppi/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.1",
]
dev = [
    "build>=0.8",
    "twine>=4.0",
]

[tool.moppi]
indirect-dependencies = [
    [
        "weurkzeug==1.0",
        "flask==1",
    ],
    [
        "click==1.0",
        "flask==1",
    ],
]

[tool.black]
line-length = 100
